--- a/charts/nginx/templates/deployment.yaml
+++ b/charts/nginx/templates/deployment.yaml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: 
-  namespace: {{ .Values.name }}
+  name: {{ .Values.name | default .Values.global.name }} 
+  namespace: {{ .Values.name | default .Values.global.name }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.name }}
+      app: {{ .Values.name | default .Values.global.name }}
   replicas: 1
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}
+        app: {{ .Values.name | default .Values.global.name }}
     spec:
       containers:
-      - name: {{ .Values.name }}
-        image: {{ .Values.image }}
+      - name: {{ .Values.name | default .Values.global.name }}
+        image: {{ .Values.image | default .Values.global.image }}
         ports:
         - containerPort: 80
-      serviceAccountName: {{ .Values.name }}
+      serviceAccountName: {{ .Values.name | default .Values.global.name }}
