--- a/charts/nginx/templates/service.yaml
+++ b/charts/nginx/templates/service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Values.name | default .Values.global.name }}
 spec:
   type: ClusterIP
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Values.name | default .Values.global.name }}
   ports:
   - protocol: TCP
     port: 80
