--- a/charts/nginx/templates/serviceaccount.yaml
+++ b/charts/nginx/templates/serviceaccount.yaml
@@ -2,5 +2,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.name }}
-  namespace: {{ .Values.name }}
+  name: {{ .Values.name | default .Values.global.name }}
+  namespace: {{ .Values.name | default .Values.global.name }}
