--- a/charts/nginx/templates/namespace.yaml
+++ b/charts/nginx/templates/namespace.yaml
@@ -2,4 +2,4 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{ .Values.name | default .Values.global.name }}
+  name: {{ .Values.name | default .Values.global.name }}-{{ .Values.env | default .Values.global.env }}
