--- a/charts/nginx/templates/service.yaml
+++ b/charts/nginx/templates/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.name | default .Values.global.name }}
+  namespace: {{ .Values.name | default .Values.global.name }}-{{ .Values.env | default .Values.global.env }}
 spec:
   type: ClusterIP
   selector:
