--- a/charts/apache/templates/serviceaccount.yaml
+++ b/charts/apache/templates/serviceaccount.yaml
@@ -3,4 +3,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.name | default .Values.global.name }}
-  namespace: {{ .Values.name | default .Values.global.name }}
+  namespace: {{ .Values.name | default .Values.global.name }}-{{ .Values.env | default .Values.global.env }}
