Testing multiple environments

--- a/applications/nginx/Chart.yaml
+++ b/applications/nginx/Chart.yaml
@@ -5,3 +5,7 @@ dependencies:
     alias: nginx-staging
     version: 0.0.1
     repository: file://../../charts/nginx
+  - name: nginx
+    alias: nginx-production
+    version: 0.0.1
+    repository: file://../../charts/nginx
